--- a/GymSystem.App/Views/ClientList.xaml
+++ b/GymSystem.App/Views/ClientList.xaml
@@ -3,7 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:controls="using:Microsoft.Toolkit.Uwp.UI.Controls"
-    xmlns:local="using:GymSystem.App"
+    xmlns:local="using:GymSystem.Localization"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:uc="using:GymSystem.App.UserControls"
@@ -25,7 +25,7 @@
         </Grid.RowDefinitions>
         <StackPanel Orientation="Horizontal" Margin="12">
             <TextBlock Text="Customer list GymSystem " VerticalAlignment="Center" Margin="5,0" Style="{ThemeResource SubtitleTextBlockStyle}" ></TextBlock>
-            <AppBarButton Icon="Filter" Label="Filter by">
+            <AppBarButton Icon="Filter" Label="{x:Bind local:Resources.ButtonLabelFilter}">
                 <AppBarButton.Flyout>
                     <MenuFlyout>
                         <MenuFlyoutItem  Text="1" />
@@ -39,15 +39,15 @@
             <AppBarSeparator />
             <AppBarButton
                     Icon="Contact"
-                    Label="View details" IsEnabled="{x:Bind vm:Converters.IsNotNull(ViewModel.SelectedCustomer), Mode=OneWay}"
+                    Label="{x:Bind local:Resources.ButtonLabelDetails}" IsEnabled="{x:Bind vm:Converters.IsNotNull(ViewModel.SelectedCustomer), Mode=OneWay}"
                     ToolTipService.ToolTip="View details" Click="ViewDetails_Click" />
-            <AppBarButton x:Name="addClientButton" Click="CreateClient_Click" Icon="Add" Label="Add" />
+            <AppBarButton x:Name="addClientButton" Click="CreateClient_Click" Icon="Add" Label="{x:Bind local:Resources.ButtonLabelAdd}" />
             <AppBarButton x:Name="addEntrButton"
                             IsEnabled="{x:Bind vm:Converters.IsNotNull(ViewModel.SelectedCustomer), Mode=OneWay}"
-                          Icon="Shop" Label="Add entrance" Click="AddEntrance_Click" />
+                          Icon="Shop" Label="{x:Bind local:Resources.ButtonLabelAddEntrance}" Click="AddEntrance_Click" />
             <AppBarSeparator />
-            <AppBarButton x:Name="deleteButton" Click="DeletePerson_Click"  Icon="Delete" Label="Delete" />
-            <AppBarButton x:Name="refreshButton"   Click="{x:Bind ViewModel.Sync}" Icon="Refresh" Label="Refresh" />
+            <AppBarButton x:Name="deleteButton" Click="DeletePerson_Click"  Icon="Delete" Label="{x:Bind local:Resources.ButtonLabelDelete}" />
+            <AppBarButton x:Name="refreshButton"   Click="{x:Bind ViewModel.Sync}" Icon="Refresh" Label="{x:Bind local:Resources.ButtonLabelRefresh}" />
             <uc:CollapsibleSearchBox
                 x:Name="CustomerSearchBox"
                 Margin="4,0,-265,0"
@@ -85,14 +85,14 @@
         SelectionMode="Extended"
         RowGroupHeaderPropertyNameAlternative="Range">
             <controls:DataGrid.Columns>
-                <controls:DataGridTextColumn Header="Id" />
-                <controls:DataGridTextColumn Header="Name" Binding="{Binding Name}"/>
-                <controls:DataGridTextColumn Header="Surname"  Binding="{Binding Surname}" />
-                <controls:DataGridTextColumn Header="Email" Binding="{Binding Email}" />
-                    <controls:DataGridTextColumn Header="Phone" Binding="{Binding Phone}"/>
-                <controls:DataGridTextColumn Header="Place" Binding="{Binding City}" />
-                        <controls:DataGridTextColumn Header="Street" Binding="{Binding Street}" />
-                <controls:DataGridTextColumn Header="Code"  Binding="{Binding Code}" />
+                <controls:DataGridTextColumn Header="{x:Bind local:Resources.ColumnHeaderId}" />
+                <controls:DataGridTextColumn Header="{x:Bind local:Resources.ColumnHeaderName}" Binding="{Binding Name}"/>
+                <controls:DataGridTextColumn Header="{x:Bind local:Resources.ColumnHeaderSurname}"  Binding="{Binding Surname}" />
+                <controls:DataGridTextColumn Header="{x:Bind local:Resources.ColumnHeaderEmail}" Binding="{Binding Email}" />
+                    <controls:DataGridTextColumn Header="{x:Bind local:Resources.ColumnHeaderPhone}" Binding="{Binding Phone}"/>
+                <controls:DataGridTextColumn Header="{x:Bind local:Resources.ColumnHeaderCity}" Binding="{Binding City}" />
+                        <controls:DataGridTextColumn Header="{x:Bind local:Resources.ColumnHeaderStreet}" Binding="{Binding Street}" />
+                <controls:DataGridTextColumn Header="{x:Bind local:Resources.ColumnHeaderPostalCode}"  Binding="{Binding Code}" />
                
             </controls:DataGrid.Columns>
 
