--- a/GymSystem.App/Views/AddEntranceToCustomer.xaml
+++ b/GymSystem.App/Views/AddEntranceToCustomer.xaml
@@ -16,12 +16,14 @@
                 HorizontalAlignment="Stretch"
                 Background="Transparent">
             <AppBarButton
+                    Click="{x:Bind ViewModel.SaveAsync}"
                     Icon="Save"
                     Label="Save"/>
             <AppBarButton
+                    Click="{x:Bind ViewModel.CancelEditsAsync}"
                     Icon="Cancel"
                     Label="Cancel"/>
-            
+
         </CommandBar>
         <TextBlock HorizontalAlignment="Left" Margin="265,250,0,0" Text="{x:Bind local:Resources.EntrancePropertiesType}" TextWrapping="Wrap" VerticalAlignment="Top" Height="44" Width="107"/>
         <TextBlock HorizontalAlignment="Left" Margin="265,320,0,0" Text="{x:Bind local:Resources.EntrancePropertiesPrice}" TextWrapping="Wrap" VerticalAlignment="Top" Height="44" Width="107"/>
@@ -29,14 +31,34 @@
         <TextBlock HorizontalAlignment="Left" Margin="265,460,0,0" Text="{x:Bind local:Resources.EntrancePropertiesEndDate}" TextWrapping="Wrap" VerticalAlignment="Top" Height="44" Width="107"/>
 
 
-        <!--<ComboBox x:Name="carnetType"  ItemsSource="{x:Bind ViewModel.}" SelectedItem="{x:Bind ViewModel.EnteranceTypeSelected,Mode=TwoWay}"  HorizontalAlignment="Left" Margin="431,250,0,0" VerticalAlignment="Top" Width="145">-->    
+        <!--<ComboBox x:Name="carnetType"  ItemsSource="{x:Bind ViewModel.}" SelectedItem="{x:Bind ViewModel.EnteranceTypeSelected,Mode=TwoWay}"  HorizontalAlignment="Left" Margin="431,250,0,0" VerticalAlignment="Top" Width="145">-->
         <!--</ComboBox>-->
 
-        <ComboBox x:Name="carnetType"   HorizontalAlignment="Left" Margin="431,250,0,0" VerticalAlignment="Top" Width="145">
+        <ComboBox 
+            x:Name="carnetType"   
+            HorizontalAlignment="Left" 
+            Margin="431,250,0,0" 
+            VerticalAlignment="Top" 
+            Width="296">
         </ComboBox>
-        <TextBox x:Name="price" HorizontalAlignment="Left" Margin="431,320,0,0" Text="" VerticalAlignment="Top" Height="32" Width="145" />
-        <DatePicker HorizontalAlignment="Left" Margin="431,390,0,0" VerticalAlignment="Top"/>
-        <DatePicker HorizontalAlignment="Left" Margin="431,460,0,0" VerticalAlignment="Top"/>
+        <TextBox 
+            x:Name="price"
+            HorizontalAlignment="Left"
+            Margin="431,320,0,0"
+            VerticalAlignment="Top"
+            Height="32"
+            Text="{x:Bind ViewModel.EntranceType.Price, Mode=TwoWay}"
+            Width="296" />
+        <DatePicker 
+            Date="{x:Bind ViewModel.BeginDate, Mode=TwoWay}"
+            HorizontalAlignment="Left" 
+            Margin="431,390,0,0"
+            VerticalAlignment="Top"/>
+        <DatePicker
+            Date="{x:Bind ViewModel.EndDate, Mode=TwoWay}"
+            HorizontalAlignment="Left" 
+            Margin="431,460,0,0" 
+            VerticalAlignment="Top"/>
 
     </Grid>
 </Page>
