--- a/GymSystem.App/Views/ClientList.xaml
+++ b/GymSystem.App/Views/ClientList.xaml
@@ -13,11 +13,9 @@
     
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
-
     <Grid  x:Name="LayoutRoot" Style="{StaticResource GidStyle}">
         <Grid.Resources>
-            <DataTemplate x:Key="RowDetailsTemplate">
-            </DataTemplate>
+            <DataTemplate x:Key="RowDetailsTemplate"/>
         </Grid.Resources>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
@@ -38,9 +36,11 @@
 
             <AppBarSeparator />
             <AppBarButton
-                    Icon="Contact"
-                    Label="{x:Bind local:Resources.ButtonLabelDetails}" IsEnabled="{x:Bind vm:Converters.IsNotNull(ViewModel.SelectedCustomer), Mode=OneWay}"
-                    ToolTipService.ToolTip="View details" Click="ViewDetails_Click" />
+                Click="ViewDetails_Click"
+                Icon="Contact"
+                Label="{x:Bind local:Resources.ButtonLabelDetails}" 
+                IsEnabled="{x:Bind vm:Converters.IsNotNull(ViewModel.SelectedCustomer), Mode=OneWay}"
+                ToolTipService.ToolTip="View details" />
             <AppBarButton x:Name="addClientButton" Click="CreateClient_Click" Icon="Add" Label="{x:Bind local:Resources.ButtonLabelAdd}" />
             <AppBarButton 
                 x:Name="addEntrButton"
@@ -68,39 +68,38 @@
             <uc:CollapsibleSearchBox
                 x:Name="CustomerSearchBox"
                 Margin="4,0,-265,0"
-               
                 Loaded="CustomerSearchBox_Loaded"
                 RelativePanel.AlignRightWithPanel="True" Height="29" />
 
         </StackPanel>
 
         <controls:DataGrid
-      Grid.Row="1"
-        x:Name="dataGrid"
-        Margin="12"
-        VerticalAlignment="Stretch" HorizontalAlignment="Stretch"
-        HorizontalScrollBarVisibility="Visible"
-        VerticalScrollBarVisibility="Visible"
-        AlternatingRowBackground="Transparent"
-        AlternatingRowForeground="Gray"
-        AreRowDetailsFrozen="False"
-        AreRowGroupHeadersFrozen="True"
-        AutoGenerateColumns="False"
-        CanUserSortColumns="False"
-        CanUserReorderColumns="True"
-        CanUserResizeColumns="True"
-        ColumnHeaderHeight="32"
-        MaxColumnWidth="400"
-        FrozenColumnCount="0"
-        GridLinesVisibility="None"
-        HeadersVisibility="Column"
-        IsReadOnly="False"
-        ItemsSource="{x:Bind ViewModel.Customers}"
-        SelectedItem="{x:Bind ViewModel.SelectedCustomer, Mode=TwoWay}"
-        RowDetailsTemplate="{StaticResource RowDetailsTemplate}"
-        RowDetailsVisibilityMode="Collapsed"
-        SelectionMode="Extended"
-        RowGroupHeaderPropertyNameAlternative="Range">
+            Grid.Row="1"
+            x:Name="dataGrid"
+            Margin="12"
+            VerticalAlignment="Stretch" HorizontalAlignment="Stretch"
+            HorizontalScrollBarVisibility="Visible"
+            VerticalScrollBarVisibility="Visible"
+            AlternatingRowBackground="Transparent"
+            AlternatingRowForeground="Gray"
+            AreRowDetailsFrozen="False"
+            AreRowGroupHeadersFrozen="True"
+            AutoGenerateColumns="False"
+            CanUserReorderColumns="True"
+            CanUserResizeColumns="True"
+            ColumnHeaderHeight="32"
+            MinColumnWidth="40"
+            MaxColumnWidth="400"
+            FrozenColumnCount="0"
+            GridLinesVisibility="None"
+            HeadersVisibility="Column"
+            IsReadOnly="False"
+            ItemsSource="{x:Bind ViewModel.Customers}"
+            SelectedItem="{x:Bind ViewModel.SelectedCustomer, Mode=TwoWay}"
+            RowDetailsTemplate="{StaticResource RowDetailsTemplate}"
+            RowDetailsVisibilityMode="Collapsed"
+            SelectionMode="Extended"
+            RowGroupHeaderPropertyNameAlternative="Range">
             <controls:DataGrid.Columns>
                 <controls:DataGridTextColumn Header="{x:Bind local:Resources.ColumnHeaderId}" />
                 <controls:DataGridTextColumn Header="{x:Bind local:Resources.ColumnHeaderName}" Binding="{Binding Name}"/>
@@ -110,12 +109,8 @@
                 <controls:DataGridTextColumn Header="{x:Bind local:Resources.ColumnHeaderCity}" Binding="{Binding City}" />
                 <controls:DataGridTextColumn Header="{x:Bind local:Resources.ColumnHeaderStreet}" Binding="{Binding Street}" />
                 <controls:DataGridTextColumn Header="{x:Bind local:Resources.ColumnHeaderPostalCode}"  Binding="{Binding Code}" />
-
             </controls:DataGrid.Columns>
-
         </controls:DataGrid>
-
-
 
     </Grid>
 </Page>
