improve EntranceList, AddNewEntrance
bind textbox and button on the right side of EntranceList

--- a/GymSystem.App/Views/AddEntranceToCustomer.xaml
+++ b/GymSystem.App/Views/AddEntranceToCustomer.xaml
@@ -16,7 +16,7 @@
                 HorizontalAlignment="Stretch"
                 Background="Transparent">
             <AppBarButton
-                    Click="{x:Bind ViewModel.SaveAsync}"
+                    Click="SaveBtn_Click"
                     Icon="Save"
                     Label="Save"/>
             <AppBarButton
