--- a/GymSystem.App/Views/ClientList.xaml
+++ b/GymSystem.App/Views/ClientList.xaml
@@ -49,7 +49,13 @@
                 Label="{x:Bind local:Resources.ButtonLabelAddEntrance}" 
                 Click="AddEntrance_Click" />
             <AppBarSeparator />
-            <AppBarButton x:Name="deleteButton" Click="DeletePerson_Click"  Icon="Delete" Label="{x:Bind local:Resources.ButtonLabelDelete}" Background="{x:Null}" >
+            <AppBarButton 
+                x:Name="deleteButton" 
+                Click="DeletePerson_Click"  
+                Icon="Delete"
+                IsEnabled="{x:Bind vm:Converters.IsNotNull(ViewModel.SelectedCustomer), Mode=OneWay}"
+                Label="{x:Bind local:Resources.ButtonLabelDelete}" 
+                Background="{x:Null}" >
                 <AppBarButton.Foreground>
                     <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                         <GradientStop Color="#FF3C2621"/>
